[package]
name = "epitope_diversity"
description = "A tool for estimating epitope diversity of specific regions from a NGS alignment, written in Rust."
repository = "https://github.com/Koohoko/epitope_diversity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.1.8", features = ["cargo", "derive"]}
bio = "0.42"
rust-htslib = "0.39.5"
itertools = "0.8"
# bytecount = {version = "0.6", features = ["runtime-dispatch-simd"]}
# needletail = "0.4"